# showtime

./: Cargo.toml  build.rs
res/: resources.gresource.xml  style.css
res/ui/: app_window.ui  projector_window.ui
src/: app_window.rs  gst_backend.rs  main.rs  projector_window.rs
src/ui/: app_window.ui  resources.gresource.xml
